option(PLUGIN_GAMEPLATFORM "Enable CryGamePlatform plugin?" ON)

if (PLUGIN_GAMEPLATFORM)
	add_subdirectory(Module/Core)
	add_subdirectory(Module/Steam)
	add_subdirectory(Module/Discord)
    set(PSN_MODULE_DIR "Module/PSN")
    if (EXISTS "${CMAKE_CURRENT_LIST_DIR}/${PSN_MODULE_DIR}")
        add_subdirectory(${PSN_MODULE_DIR})
    else()
        message(WARNING "The PSN module could not be found at ${PSN_MODULE_DIR}")
	endif()
	add_subdirectory(Module/Rail)
endif()
